# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

motion_part_name = "motion"
motion_root_path = "//base/msdp/device_status"
motion_interfaces_path = "${motion_root_path}/interfaces"
motion_frameworks_path = "${motion_root_path}/frameworks"
motion_service_path = "${motion_root_path}/services"
motion_utils_path = "${motion_root_path}/utils"
